{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 11615,
  "lineage": "44fe7301-74d8-0bd2-f456-16feaca5fa0d",
  "resources": [
    {
      "module": "module.fargate",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "efs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:targetgroup/efs/5a896f6b8ce2065e",
            "arn_suffix": "targetgroup/efs/5a896f6b8ce2065e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:targetgroup/efs/5a896f6b8ce2065e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "efs",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "efs"
            },
            "tags_all": {
              "Name": "efs"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.fargate.module.fargate-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:security-group/sg-0c9c1e216b745deed",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c9c1e216b745deed",
            "ingress": [],
            "name": "production-ecs-fargate-security-group",
            "name_prefix": "",
            "owner_id": "881750644134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "ecs-fargate-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ecs-fargate-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.fargate.module.fargate-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security-group-rule-egress-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "production-ecs-fargate Fargate service security group egress all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1659394399",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9c1e216b745deed",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.module.fargate-security-group.aws_security_group.security_group",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.fargate.module.fargate-security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security-group-rule-inbound-from-other-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "production-ecs-fargate Fargate service security group inbound traffic on port 80",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2781721061",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9c1e216b745deed",
            "self": false,
            "source_security_group_id": "sg-0c9e29ce02253f5cc",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.module.fargate-security-group.aws_security_group.security_group",
            "module.frontend-alb.module.balancer-sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:loadbalancer/app/production-frontend-alb/d6b6d2b9938b9b32",
            "arn_suffix": "app/production-frontend-alb/d6b6d2b9938b9b32",
            "desync_mitigation_mode": "defensive",
            "dns_name": "production-frontend-alb-2144732332.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:loadbalancer/app/production-frontend-alb/d6b6d2b9938b9b32",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c9e29ce02253f5cc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028f0330d4334e73e"
              },
              {
                "subnet_id": "subnet-09c2cea74d51ee657"
              }
            ],
            "subnets": [
              "subnet-028f0330d4334e73e",
              "subnet-09c2cea74d51ee657"
            ],
            "vpc_id": "vpc-0b63d3f1d8503da91",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.frontend-alb.module.balancer-sg.aws_security_group.security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:listener/app/production-frontend-alb/d6b6d2b9938b9b32/0f2615bd30b94bb2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:listener/app/production-frontend-alb/d6b6d2b9938b9b32/0f2615bd30b94bb2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:loadbalancer/app/production-frontend-alb/d6b6d2b9938b9b32",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend-alb.aws_lb.alb",
            "module.frontend-alb.module.balancer-sg.aws_security_group.security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:listener/app/production-frontend-alb/d6b6d2b9938b9b32/057fa6b745242960",
            "certificate_arn": "arn:aws:acm:ap-south-1:881750644134:certificate/c5e91ffd-4014-418c-b41e-bc8bd1315825",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:targetgroup/efs/5a896f6b8ce2065e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:listener/app/production-frontend-alb/d6b6d2b9938b9b32/057fa6b745242960",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:881750644134:loadbalancer/app/production-frontend-alb/d6b6d2b9938b9b32",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fargate.aws_lb_target_group.task",
            "module.frontend-alb.aws_lb.alb",
            "module.frontend-alb.module.balancer-sg.aws_security_group.security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-alb.module.balancer-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:security-group/sg-0c9e29ce02253f5cc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c9e29ce02253f5cc",
            "ingress": [],
            "name": "production-frontend-alb-security-group",
            "name_prefix": "",
            "owner_id": "881750644134",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "frontend-alb-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "frontend-alb-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-alb.module.balancer-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security-group-rule-egress-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "production-frontend-alb external balancer edgress all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-783475796",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9e29ce02253f5cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend-alb.module.balancer-sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-alb.module.balancer-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security-group-rule-inbound-cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "production-inbound traffic on 443 to external frontend-alb balancer",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2547278406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9e29ce02253f5cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend-alb.module.balancer-sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "production-inbound traffic on 80 to external frontend-alb balancer",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3013341397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9e29ce02253f5cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend-alb.module.balancer-sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0e12d46569ed8bd",
            "domain": "vpc",
            "id": "eipalloc-0c0e12d46569ed8bd",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-206-15-26.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.15.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-ap-south-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b54e00d105f52c3",
            "domain": "vpc",
            "id": "eipalloc-07b54e00d105f52c3",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-205-182-61.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.182.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-ap-south-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:internet-gateway/igw-0dcd1f879cc308267",
            "id": "igw-0dcd1f879cc308267",
            "owner_id": "881750644134",
            "tags": {
              "Environment": "production",
              "Name": "main-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0e12d46569ed8bd",
            "connectivity_type": "public",
            "id": "nat-043a750c2171675ba",
            "network_interface_id": "eni-06b77add4f2377337",
            "private_ip": "10.0.0.152",
            "public_ip": "15.206.15.26",
            "subnet_id": "subnet-028f0330d4334e73e",
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-ap-south-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b54e00d105f52c3",
            "connectivity_type": "public",
            "id": "nat-0a7fe5a5874a70692",
            "network_interface_id": "eni-024371ff1323c2953",
            "private_ip": "10.0.2.148",
            "public_ip": "43.205.182.61",
            "subnet_id": "subnet-09c2cea74d51ee657",
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-ap-south-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fd72257638bf98dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-043a750c2171675ba",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd72257638bf98dc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01b8b9b99525a09c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a7fe5a5874a70692",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b8b9b99525a09c1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dcd1f879cc308267",
            "id": "r-rtb-0c0406e9aeedd48811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0406e9aeedd4881",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:route-table/rtb-0fd72257638bf98dc",
            "id": "rtb-0fd72257638bf98dc",
            "owner_id": "881750644134",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:route-table/rtb-01b8b9b99525a09c1",
            "id": "rtb-01b8b9b99525a09c1",
            "owner_id": "881750644134",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:route-table/rtb-0c0406e9aeedd4881",
            "id": "rtb-0c0406e9aeedd4881",
            "owner_id": "881750644134",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074d79bd7a1fb0464",
            "route_table_id": "rtb-0fd72257638bf98dc",
            "subnet_id": "subnet-0e54cbbe34745b3cf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beebcef8edf60664",
            "route_table_id": "rtb-01b8b9b99525a09c1",
            "subnet_id": "subnet-0e6a986ff6bbccbe1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0fb0f56b54bf06a",
            "route_table_id": "rtb-0c0406e9aeedd4881",
            "subnet_id": "subnet-028f0330d4334e73e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca422cee1da2cdcc",
            "route_table_id": "rtb-0c0406e9aeedd4881",
            "subnet_id": "subnet-09c2cea74d51ee657"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:subnet/subnet-0e54cbbe34745b3cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e54cbbe34745b3cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881750644134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:subnet/subnet-0e6a986ff6bbccbe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6a986ff6bbccbe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881750644134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:subnet/subnet-028f0330d4334e73e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028f0330d4334e73e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "881750644134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-public-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-public-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:subnet/subnet-09c2cea74d51ee657",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c2cea74d51ee657",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "881750644134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "main-vpc-public-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc-public-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b63d3f1d8503da91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:881750644134:vpc/vpc-0b63d3f1d8503da91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f15dcfb223c94f7",
            "default_route_table_id": "rtb-0598bbff4a07596e9",
            "default_security_group_id": "sg-0ba6767d5f4437abc",
            "dhcp_options_id": "dopt-05e809ccc4fb59f4b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b63d3f1d8503da91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0598bbff4a07596e9",
            "owner_id": "881750644134",
            "tags": {
              "Environment": "production",
              "Name": "main-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "main-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}